--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -275,7 +275,7 @@
           <th colspan="16" style="border: 1px solid black; background-color: #e6ffe6;"><center>ZTF Candidate(s)</center></th>
           <th colspan="4" style="border: 1px solid black; background-color: #ffebcc;"><center>Alerce Classifier</center></th>
           <th colspan="6" style="border: 1px solid black; background-color: #f2e6ff;"><center>GLADE Catalog</center></th>
-          <th colspan="4" style="border: 1px solid black; background-color: #cfe3e6;"><center>Other</center></th>
+          <th colspan="6" style="border: 1px solid black; background-color: #cfe3e6;"><center>Other</center></th>
         </thead>
           <thead>
             <tr>
@@ -309,8 +309,8 @@
               <th><font color="blue">Alerce</font></th>
               <th><font color="blue">Lasair</font></th>
               <th><font color="blue">MMT</font></th>
-	      <!-- <th><font color="blue">MMT</font></th> -->
-	      <!-- <th><font color="blue">MMT</font></th> -->
+	      <th><font color="blue">MMT</font></th>
+	      <th><font color="blue">SDSS</font></th>
             </tr>
             <tr>
               <th><font color="grey">cutout</font></th>
@@ -343,8 +343,8 @@
               <th><font color="grey">finder</font></th>
               <th><font color="grey">page</font></th>
               <th><font color="grey">request</font></th>
-	      <!-- <th><font color="grey">finder</font></th>7 -->
-	      <!-- <th><font color="grey">Observe</font></th> -->
+	      <th><font color="grey">request</font></th>
+	      <th><font color="grey">finder</font></th>
             </tr>
           </thead>
           <tbody>
@@ -444,8 +444,8 @@
 	       <td><a href="https://www.findingchart.alerce.online/get_chart?oid={{ alert.zoid }}&candid={{ alert.zcandid }}" title="{{ alert.zoid }}" class="btn btn-outline-success btn-small">Finder</a></td>
                <td><a href="https://lasair.roe.ac.uk/object/{{ alert.zoid }}/" title="{{ alert.zoid }}" class="btn btn-outline-success btn-small">{{ alert.zoid }}</a></td>
                <td><a href="{{ url_for('mmt_longslit', zoid=alert.zoid) }}" title="Longslit_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Spectrum</a></td>
-	       <!-- <td><a href="{{ url_for('mmt_imaging', zoid=alert.zoid) }}" title="Imaging_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Image</a></td> -->
-	       <!-- <td><img src={{ url_for('static', filename='/img/') }}{{ alert.spng|replace("science", "finder") }} title=/static/img/{{ alert.spng|replace("science", "finder") }} height="50" width="300"></td> -->
+	       <td><a href="{{ url_for('mmt_imaging', zoid=alert.zoid) }}" title="Imaging_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Image</a></td>
+	       <td><a href="{{ url_for('sdss_finder', img=alert.spng|replace('science', 'sdss')) }}" title="finder" class="btn btn-outline-info btn-small">Finder</a></td>
               </tr>
             {% endfor %}
           </tbody>
