--- a/src/templates/gwgc_record.html
+++ b/src/templates/gwgc_record.html
@@ -90,22 +90,22 @@
                 </tr>
 
                 <tr class="table-info">
-                    <td>Major Axis (&Prime;)</td>
+                    <td>Major Axis (&prime;)</td>
                     <td>{{ record.a }}</td>
                 </tr>
 
                 <tr class="table-info">
-                    <td>&#0948;Major Axis (&Prime;)</td>
+                    <td>&#0948;Major Axis (&prime;)</td>
                     <td>&plusmn; {{ record.e_a }}</td>
                 </tr>
 
                 <tr class="table-info">
-                    <td>Minor Axis (&Prime;)</td>
+                    <td>Minor Axis (&prime;)</td>
                     <td>{{ record.b }}</td>
                 </tr>
 
                 <tr class="table-info">
-                    <td>&#0948;Minor Axis (&Prime;)</td>
+                    <td>&#0948;Minor Axis (&prime;)</td>
                     <td>&plusmn; {{ record.e_b }}</td>
                 </tr>
 
