--- a/src/templates/gwgc_q3c.html
+++ b/src/templates/gwgc_q3c.html
@@ -63,7 +63,7 @@
 
         <div class="form-group">
           <label for="sort_value">Using Filters ...</label>
-          <input type="text" class="form-control form-control-sm" id="objectName" name="objectName" value="{{ request.args.name }}" placeholder="Object Name">
+          <input type="text" class="form-control form-control-sm" id="name" name="name" value="{{ request.args.name }}" placeholder="Name">
         </div>
 
         <div class="form-row">
