Fixed problems with GWGC search

--- a/src/templates/gwgc.html
+++ b/src/templates/gwgc.html
@@ -127,11 +127,11 @@
         </div>
 
         <div class="form-group">
-          <input type="number" class="form-control form-control-sm" id="PGC" name="PGC" value="{{ request.args.pgc }}" placeholder="PGC Code">
+          <input type="number" class="form-control form-control-sm" id="pgc" name="pgc" value="{{ request.args.pgc }}" placeholder="PGC Code">
         </div>
 
         <div class="form-group">
-          <input type="number" class="form-control form-control-sm" id="TT" name="TT" value="{{ request.args.tt }}" placeholder="TT Code">
+          <input type="number" step="0.01" class="form-control form-control-sm" id="tt" name="tt" value="{{ request.args.tt }}" placeholder="TT Code">
         </div>
 
         <div class="form-row">
