--- a/src/templates/glade_q3c.html
+++ b/src/templates/glade_q3c.html
@@ -67,10 +67,10 @@
 
         <div class="form-group">
           <label for="sort_value">Using Filters ...</label>
-          <input type="text" class="form-control form-control-sm" id="GWGC Name" name="gwgcName" value="{{ request.args.gwgc }}" placeholder="gwgc name">
-          <input type="text" class="form-control form-control-sm" id="HyperLEDA Name" name="hyperledaName" value="{{ request.args.hyperleda }}" placeholder="hyperleda name">
-          <input type="text" class="form-control form-control-sm" id="2MASS Name" name="twomass" value="{{ request.args.twomass }}" placeholder="twomass name">
-          <input type="text" class="form-control form-control-sm" id="SDSS Name" name="sdssName" value="{{ request.args.sdss }}" placeholder="sdss name">
+          <input type="text" class="form-control form-control-sm" id="gwgc" name="gwgc" value="{{ request.args.gwgc }}" placeholder="gwgc name">
+          <input type="text" class="form-control form-control-sm" id="hyperleda" name="hyperleda" value="{{ request.args.hyperleda }}" placeholder="hyperleda name">
+          <input type="text" class="form-control form-control-sm" id="twomass" name="twomass" value="{{ request.args.twomass }}" placeholder="twomass name">
+          <input type="text" class="form-control form-control-sm" id="sdss" name="sdss" value="{{ request.args.sdss }}" placeholder="sdss name">
         </div>
 
         <div class="form-row">
