Fixed searches within the display for TNS

--- a/src/templates/tns.html
+++ b/src/templates/tns.html
@@ -77,7 +77,7 @@
      <label><b>Using Filters ...</b></label>
 
      <div class="form-row">
-      <input type="text" class="form-control form-control-sm" id="name" name="name"
+      <input type="text" class="form-control form-control-sm" id="tns_name" name="tns_name"
           value="{{ request.args.tns_name }}" placeholder="2019rfo">
      </div>
 
