Added astro/cone/ellipse search to Glade Q3c page

--- a/src/templates/glade_q3c.html
+++ b/src/templates/glade_q3c.html
@@ -163,6 +163,30 @@
           </div>
         </div>
 
+	<label for="astrocone">Astronomical Search ...</label>
+        <div class="form-row">
+         <div class="col">
+          <input type="text" class="form-control form-control-sm" id="astrocone"
+              name="astrocone" value="" placeholder="name(txt),radius(degree)">
+         </div>
+        </div>
+
+        <label for="cone">Cone Search ...</label>
+        <div class="form-row">
+         <div class="col">
+          <input type="text" class="form-control form-control-sm" id="cone"
+              name="cone" value="" placeholder="ra(degree),dec(degree),radius(degree)">
+         </div>
+        </div>
+
+        <label for="ellipse">Ellipse Search ...</label>
+        <div class="form-row">
+         <div class="col">
+          <input type="text" class="form-control form-control-sm" id="ellipse"
+              name="ellipse" value="" placeholder="ra(degree),dec(degree),major_axis(degree),axis_ratio,position_angle(degree)">
+         </div>
+        </div>
+
         <div align="center">
           <button type="submit" class="btn btn-success">Select</button>
           <a href="/sassy/glade_q3c" class="btn btn-warning">Reset</a>
