--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -322,7 +322,8 @@
 	      <!-- Other -->
               <th><font color="blue">Lasair</font></th>
               <th><font color="blue">MMT</font></th>
-	      <th><font color="blue">Observability</font></th>
+	      <th><font color="blue">Finder</font></th>
+	      <th><font color="blue">Airmass</font></th>
             </tr>
             <tr>
 	      <!-- ZTF -->
@@ -358,7 +359,8 @@
 	      <!-- Other -->
               <th><font color="grey">page</font></th>
               <th><font color="grey">request</font></th>
-	      <th><font color="grey">finder</font></th>
+	      <th><font color="grey">chart</font></th>
+	      <th><font color="grey">chart</font></th>
             </tr>
           </thead>
           <tbody>
@@ -474,6 +476,7 @@
                <td><a href="https://lasair.roe.ac.uk/object/{{ alert.zoid }}/" target="_blank" title="{{ alert.zoid }}" class="btn btn-outline-success btn-small">{{ alert.zoid }}</a></td>
                <td><a href="{{ url_for('mmt_longslit', zoid=alert.zoid) }}" title="Longslit_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Spectrum</a></td>
 	       <td><a href="{{ url_for('show_image', img=alert.spng|replace('science', 'finder')) }}" target="_blank" title="finder" class="btn btn-outline-info btn-small">Finder</a></td>
+	       <td><a href="{{ url_for('show_image', img=alert.spng|replace('science', 'airmass')) }}" target="_blank" title="airmass" class="btn btn-outline-info btn-small">Airmass</a></td>
               </tr>
             {% endfor %}
           </tbody>
