--- a/src/templates/mmt_longslit.html
+++ b/src/templates/mmt_longslit.html
@@ -124,6 +124,33 @@
    <br>
 
    <div class="row">
+    <div class="col-md-8">
+      <img src="{{ url_for('static', filename='/img/') }}{{ fnd }}" title="/static/img/{{ fnd }}" width="640" height="320">
+    </div>
+    <div class="col-md-4">
+     <img src="{{ url_for('static', filename='/img/') }}{{ air }}" title="/static/img/{{ air }}" width="400" height="400">
+    </div>
+   </div>
+   <br>
+   <div class="row">
+    <div class="col-md-4">
+     <img src="{{ url_for('static', filename='/img/') }}{{ dif }}" title="/static/img/{{ dif }}" width="300" height="300">
+    </div>
+    <div class="col-md-4">
+     <img src="{{ url_for('static', filename='/img/') }}{{ sci }}" title="/static/img/{{ sci }}" width="300" height="300">
+    </div>
+    <div class="col-md-4">
+     <img src="{{ url_for('static', filename='/img/') }}{{ tmp }}" title="/static/img/{{ tmp }}" width="300" height="300">
+    </div>
+   </div>
+   <br>
+	   <!--
+    <div class="col-md-2">
+      <img src="{{ url_for('static', filename='/img/') }}{{ fnd }}" title="/static/img/{{ fnd }}" height="200" width="400">
+    </div>
+    <div class="col-md-2">
+      <img src="{{ url_for('static', filename='/img/') }}{{ air }}" title="/static/img/{{ air }}" height="300" width="300">
+    </div>
     <div class="col-md-2">
       <img src="{{ url_for('static', filename='/img/') }}{{ dif }}" title="/static/img/{{ dif }}" height="250" width="250">
     </div>
@@ -133,15 +160,7 @@
     <div class="col-md-2">
       <img src="{{ url_for('static', filename='/img/') }}{{ tmp }}" title="/static/img/{{ tmp }}" height="250" width="250">
     </div>
-    <div class="col-md-2">
-      <img src="{{ url_for('static', filename='/img/') }}{{ fnd }}" title="/static/img/{{ fnd }}" height="250" width="250">
-    </div>
-    <div class="col-md-2">
-      <img src="{{ url_for('static', filename='/img/') }}{{ air }}" title="/static/img/{{ air }}" height="250" width="250">
-    </div>
-   </div>
-   <br>
-
+	   -->
    <div class="d-flex justify-content-between">
     <div class="row">
      {{ form.submit(class_="btn btn-md btn-primary") }}
